[project]
name = "ppmm"
version = "1.2.0"
description = "一个简单的pip镜像管理工具"
authors = [
    {name = "XuLan", email = "xuzn@msn.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.6"

[project.scripts]
mm = "ppmm.cli:main"

[project.urls]
repository = "https://github.com/LanMist/ppmm"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
ppmm = ["data.json"]